--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </head>
 <body>
 <!-- top part html start -->
+<div>
 <img id="headimag" src="https://uidesign.gbtcdn.com/GB/image/9599/%E9%A1%B6%E9%80%9A%E6%9D%A1%E5%B9%85+1920X60+en.jpg" alt="heading" border="0">
 <div id="head">
     <div id="logo">
@@ -34,9 +35,6 @@
         <p>Language<span><select name="" id=""></select></span></p>
         <p>Country Website<select name="" id=""></select></p>
     </div>
-
-   
-   
 
 </div>
 <div id="searchbar">
@@ -77,8 +75,8 @@
 
 <div id="im">
     <img src="https://uidesign.gbtcdn.com/GB/image/9599/%E6%B0%9B%E5%9B%B4banner+1190X210+en.png" alt="">
+ </div>
 </div>
-
     <!-- middle part html start-->
     <div id="Main_container">
     <p class="heading"><span> <i class="fa fa-shopping-bag" style="font-size: 22px;"></i></span> COLLECTION</p>
