--- a/about.html
+++ b/about.html
@@ -58,6 +58,7 @@
     display: flex;
     justify-content: space-around;
     gap: 30px;
+    font-size: 17px;
     }
     #search{
     border: 1px solid #ffda00;
