--- a/productPage.html
+++ b/productPage.html
@@ -104,15 +104,97 @@
                 <i class="fa-solid fa-star"></i>
                 <p>0 Customer Reviews</p>
             </div>
-            <div class="SD">
-                <p>Super Deals</p>
-                <div class="time_ends">
-                    <div class="end"><p>0 Sold</p></div>
-                    <div><p>Ends In:13:35:50</p></div>
+            <div>
+                <div class="SD">
+                    <p>Super Deals</p>
+                    <div class="time_ends">
+                        <div class="end"><p>0 Sold</p></div>
+                        <div><p>Ends In:13:35:50</p></div>
+                    </div>
+                </div>
+                <div class="product_box">
+                        <p class="price_tag">Price:</p>
+                        <h1 class="price1">$890.00</h1>
+                        <div class="stoprice">
+                            <p class="rrp">RRP:</p>
+                            <p class="soprice">$1299.00</p>
+                        </div>
+                        <div class="perc">32% OFF</div>
+                </div>
+                <div class="promo">
+                    <p>Promo:</p>
+                    <p>Over $300.00, get $5.00 OFF.</p>
+                    <p id="view_more">View More<i class="fa-solid fa-chevron-right"></i></p>
+                </div>
+            </div>
+            <div class="shipping">
+                <p>Shipping:</p>
+                <p class="no_more">No More shipping methode to <p id="US">United States</p></p>
+            </div>
+            <div class="color">
+                <p>color:</p>
+                <div class="blue">BLUE</div>
+            </div>
+            <div class="ships_from">
+                <p>Ships From:</p>
+                <div class="eu_us_uk">
+                    <div id="eu">EU</div>
+                    <div class="us">US</div>
+                    <div class="uk">UK</div>
+                </div>
+            </div>
+            <div class="qty">
+                <p>QTY:</p>
+                <div class="nums">
+                    <div>-</div>
+                    <div>1</div>
+                    <div>+</div>
+                </div>
+                <p>In stock</p>
+            </div>
+            <div class="buttons">
+                <button class="addtocart">Add To Cart</button>
+                <button class="buynow">Buy Now</button>
+            </div>
+            <div class="fav">
+                <p><i class="fa-solid fa-heart"></i> Add to Favorites (1)</p>
+            </div>
+            <div class="cards">
+                <div class="paypal"><img src="https://css.gbtcdn.com/imagecache/gbw/img/site/paypal@.png" alt="" width="auto" height="28px"></div>
+                <div class="vcard"><img src="https://uidesign.gbtcdn.com/GB/images/others/GB_brandpic/mm/VISA.png?imbypass=true" alt="" width="auto" height="28px"></div>
+                <div class="mcard"><img src="https://uidesign.gbtcdn.com/GB/images/others/GB_brandpic/mm/mc_vrt_opt_pos_73_2x.png?imbypass=true" alt="" width="auto" height="28px"></div>
+                <div class="taxes">
+                    <p>Tax Info</p>
+                    <p>Price Protection</p>
+                    <p>Price Disclaimer</p>
+                    <p>Report Item</p>
                 </div>
             </div>
         </div>
 
+    </div>
+    <div class="box2">
+        <div class="recommend">Recommended For You</div>
+        <div class="items">
+            <div><i class="fa-solid fa-chevron-left"></i></div>
+            <div class="inneritems">
+                <div class="img_div">
+                    <div class="per_off">25% Off</div>
+                </div>
+                <p>Samebike 20LVXD30 350W Foldable Electric...</p>
+                <div class="p_tag">
+                    <p class="pr">$759.00</p>
+                    <p class="rr">RRP:</p>
+                    <p class="sr">$929.00</p>
+                </div>
+            </div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div><i class="fa-solid fa-chevron-right"></i></div>
+        </div>
     </div>
 </div>
 
