middle part in progress

--- a/productPage.html
+++ b/productPage.html
@@ -181,7 +181,7 @@
                 <div class="img_div">
                     <div class="per_off">25% Off</div>
                 </div>
-                <p>Samebike 20LVXD30 350W Foldable Electric...</p>
+                <p class="name">Samebike 20LVXD30 350W Foldable Electric...</p>
                 <div class="p_tag">
                     <p class="pr">$759.00</p>
                     <p class="rr">RRP:</p>
@@ -197,5 +197,11 @@
         </div>
     </div>
 </div>
+
+    
+</body>
+</html>
+<script src="productPage.js"></script>
+
 
 
