--- a/all-new-arrival.html
+++ b/all-new-arrival.html
@@ -53,10 +53,11 @@
         </div>  
         
         <div id="cat">
-            <div id="black"><h4>Category</h4></div>
-            <div><h4>SUPER DEALS</h4></div>
-            <div><h4>APP ONLY</h4></div>
-            <div><h4>NEW ARRIVALS</h4></div>
+            <div id="black"><h4><a href="index.html" class="ahrefcategory">Category</a></h4></div>
+            <div><h4><a href="superdeals.html">SUPER DEALS</a></h4></div>
+            <div><h4><a href="AppOnly.html">APP ONLY</a></h4></div>
+            <div><h4><a href="new-arrival.html">NEW ARRIVALS</a></h4></div>
+            </div>
         </div>
     </div>
 
