--- a/new-arrival.html
+++ b/new-arrival.html
@@ -44,10 +44,10 @@
         </div>  
         
         <div id="cat">
-            <div id="black"><h4>Category</h4></div>
-            <div><h4>SUPER DEALS</h4></div>
-            <div><h4>APP ONLY</h4></div>
-            <div><h4>NEW ARRIVALS</h4></div>
+            <div id="black"><h4><a href="index.html" class="ahrefcategory">Category</a></h4></div>
+    <div><h4><a href="superdeals.html">SUPER DEALS</a></h4></div>
+    <div><h4><a href="AppOnly.html">APP ONLY</a></h4></div>
+    <div><h4><a href="new-arrival.html">NEW ARRIVALS</a></h4></div>
         </div>
     </div>
     <!--------------------- code for new arrival ------------------- -->
@@ -56,7 +56,7 @@
     <div>
         <div class="new-arrival">
             <div class="new-arrival-head">
-                <p><i class="fa-solid fa-gem " id="logoColor"></i> NEW FOR YOU</p>
+                <p><i class="fa-solid fa-gem " id="logoColor"></i> NEW FOR TODAY</p>
             </div>
             <div class="new-arrival-moving-head">
                 <i class="fa-solid arrow slider fa-angle-left" id="logoColor"></i>
@@ -69,7 +69,7 @@
 
         <div class="centerd-title">
             <div>LATEST COLLECTIONS</div>
-            <div class="AllNewProduct">All New Arrival <i class="fa-solid fa-angle-right"></i></div>
+            <div class="AllNewProduct">All New Arrival <span></span><i class="fa-solid fa-angle-right"></i></div>
         </div>
 
         <div class="navBar">
@@ -83,9 +83,9 @@
             <div class="home">Home & Garder</div>
             <div class="sports">Outdoor & Sports</div>
         </div>
-
+      <div class="head-NewProduct-center">
         <div class="NewProduct-center"> </div>
-
+    </div>
     <!-- -------------------------------Code For Bottom  -------------------->
     <!-- ------------------------------------------------------------------ -->
     <!-- ---------------------------------------------------------------- -->
