--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 <div class="bottom_box3">
     <div class="bottom_box3_1">
         <h4>Company Information</h4> 
-        <p> <a  href="https://www.gearbest.com/about/about-us.html"> About Us </a> </p> 
+        <p> <a  href="about.html"> About Us </a> </p> 
         <p> <a  href="https://www.gearbest.com/about/top-searches/"> Top Searches </a> </p> 
         <p> <a  href="https://www.gearbest.com/about/privacy-policy.html"> Privacy Policy </a> </p> 
         <p> <a  href="https://www.gearbest.com/about/terms-and-conditions.html"> Terms and Conditions </a> </p> 
