--- a/productPage.html
+++ b/productPage.html
@@ -492,7 +492,7 @@
     </div>
     <br>
     <div class="box7">
-        <div class="main_fea">Your Recently Viewed Items</div>
+        <div class="main_fea yrvi">Your Recently Viewed Items</div>
         <div class="your_items">
             <div class="left_items">
                 <div><img src="https://gloimg.gbtcdn.com/soa/gb/item/6870745450383863808/16432/goods_thumb_220-v3/ccc66a31ee96.jpg" alt=""></div>
@@ -513,9 +513,27 @@
     <div class="box8">
         <div id="bottom_container">
             <div class="pop_searches">
-                <div>
+                <div class="buy_electric_motors">
                     <h3>Buy Electrice Bikes</h3>
-                    <p>View More<i class="fa-regular fa-chevron-down"></i></p>
+                    <p>View More<i class="fa-solid fa-chevron-down"></i></p>
+                </div>
+                <div class="listed_items">
+                    <p>folding electric bikes</p>
+                    <p>samebike electric bikes</p>
+                    <p>xiaomi electric bikes</p>
+                    <p> electric bikes bicycles</p>
+                    <p> electric bicycle motor</p>
+                    <p>electric bicycles bikes</p>
+                    <p>electric bike.</p>
+                    <p>bicycle</p>
+                    <p>motor electric</p>
+                    <p>electrics scooter xiaomi</p>
+                    <p>electric bike wheel</p>
+                    <p>electric bicicletas</p>
+                    <p>electrics scooters xiaomi</p>
+                    <p>electric scooter xiami m365</p>
+                    <p>electric scooter 8.5</p>
+                    <p>electric moped bicycle</p>
                 </div>
                 
             </div>
@@ -546,11 +564,11 @@
                 </div>
             </div>
      
-    <div class="bottom_box2">
-        <div class="bottom_box2_subs">
-            <span class="bottom_box2_text">Newsletter</span> 
+    <div class="bot_box2">
+        <div class="bot_box2_subs">
+            <span class="bot_box2_text">Newsletter</span> 
             <span><input type="email" class="bottom_box2_email"placeholder="Enter Email to get 50 Points"/> </span> 
-            <button type="submit" class="bottom_box2_btn"> Subscribe </button> 
+            <button type="submit" class="bot_box2_btn"> Subscribe </button> 
         </div>
         <div class="bottom_box2_Soical_id">
                 <div class="icon-fb"><a  href="https://www.facebook.com/Gearbestshopping">  <i class="fa-brands fa-facebook-f"></i> </a> </div>
@@ -564,7 +582,7 @@
                 <div class="icon-tu"><a  href="http://bit.ly/2LadoyE"> <i class="fa-brands fa-tumblr"></i> </a></div> 
         </div>
     </div>
-    <div class="bottom_box3">
+    <div class="bot_box3">
         <div class="bottom_box3_1">
             <h4>Company Information</h4> 
             <p> <a  href="https://www.gearbest.com/about/about-us.html"> About Us </a> </p> 
