update and link all pages

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!-- top part html start -->
 
 <div>
-=======
+
 
 <img id="headimag" src="https://uidesign.gbtcdn.com/GB/image/9599/%E9%A1%B6%E9%80%9A%E6%9D%A1%E5%B9%85+1920X60+en.jpg" alt="heading" border="0">
 <div id="head">
@@ -42,7 +42,7 @@
     </div>
 
 
-=======
+
    
    
 
@@ -89,7 +89,7 @@
 
  </div>
 </div>
-=======
+
 </div>
 
 
@@ -268,7 +268,7 @@
 <div class="bottom_box3">
     <div class="bottom_box3_1">
         <h4>Company Information</h4> 
-        <p> <a  href="https://www.gearbest.com/about/about-us.html"> About Us </a> </p> 
+        <p> <a  href="about.html"> About Us </a> </p> 
         <p> <a  href="https://www.gearbest.com/about/top-searches/"> Top Searches </a> </p> 
         <p> <a  href="https://www.gearbest.com/about/privacy-policy.html"> Privacy Policy </a> </p> 
         <p> <a  href="https://www.gearbest.com/about/terms-and-conditions.html"> Terms and Conditions </a> </p> 
