--- a/about.html
+++ b/about.html
@@ -107,11 +107,12 @@
     }
 
     #cat>div{
-    display: flex;
+        display: flex;
     width: 250px;
     height: 40px;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
+    margin-left: 75px
     }
     #cat h4:hover{
     text-decoration: underline 5px yellow;
