--- a/new-arrival.html
+++ b/new-arrival.html
@@ -44,7 +44,7 @@
         </div>  
         
         <div id="cat">
-            <div id="black"><h4><a href="index.html" class="ahrefcategory">Category</a></h4></div>
+            <div id="black"><h4><span><i class="fa-solid fa-bars"></i><a href="index.html" class="ahrefcategory">Category</a></h4></div>
     <div><h4><a href="superdeals.html">SUPER DEALS</a></h4></div>
     <div><h4><a href="AppOnly.html">APP ONLY</a></h4></div>
     <div><h4><a href="new-arrival.html">NEW ARRIVALS</a></h4></div>
