--- a/superdeals.html
+++ b/superdeals.html
@@ -46,10 +46,10 @@
 </div>  
 
 <div id="cato">
-    <div><h4><span><i class="fa-solid fa-bars"></i></span> Category</h4></div>
-    <div><h4>SUPER DEALS</h4></div>
-    <div><h4>APP ONLY</h4></div>
-    <div><h4>NEW ARRIVALS</h4></div>
+    <div><h4><span><i class="fa-solid fa-bars"></i></span><a href="index.html"> Category</a></h4></div>
+    <div><h4><a href="superdeals.html"> SUPER DEALS</h4></a></div>
+    <div><h4><a href=""></a> APP ONLY</h4></div>
+    <div><h4><a href="new-arrival.html"> NEW ARRIVALS</a></h4></div>
 </div>
 
 
