--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </div>
 
 </div>  
-
+<!-- linking pages -->
 <div id="cat">
     <div id="black"><h4><a href="index.html" class="ahrefcategory">Category</a></h4></div>
     <div><h4><a href="superdeals.html">SUPER DEALS</a></h4></div>
