--- a/productPage.html
+++ b/productPage.html
@@ -59,7 +59,7 @@
 </div>
 <!-- top part ended -->
 
-<div class="container">
+<div class="containe">
     <div class="line1">
         <div class="start">
             <p>Home<i class="fa-solid fa-chevron-right"></i></p>
@@ -149,9 +149,9 @@
             <div class="qty">
                 <p>QTY:</p>
                 <div class="nums">
-                    <div>-</div>
-                    <div>1</div>
-                    <div>+</div>
+                    <div class="substract">-</div>
+                    <div class="value"></div>
+                    <div class="adding">+</div>
                 </div>
                 <p>In stock</p>
             </div>
@@ -337,51 +337,11 @@
     </div>
     <div class="box4">
         <div class="main_fea">Suggested Products</div>
-        <div class="items">
-            <div><i class="fa-solid fa-chevron-left"></i></div>
-            <div class="inneritems">
-                <img src="https://gloimg.gbtcdn.com/soa/gb/pdm-product-pic/Electronic/2017/11/07/goods_img-v1/20171107170824_66872.jpg" alt="">
-                <p class="name">Samebike 20LVXD30 350W  Electric...</p>
-                <div class="p_tag">
-                    <p class="pr">$759.00</p>
-                </div>
-            </div>
-            <div class="inneritems">
-                <img src="https://gloimg.gbtcdn.com/soa/gb/pdm-product-pic/Electronic/2018/11/10/goods_img-v1/20181110110203_97093.jpg" alt="">
-                <p class="name">Solar Charging Panel Removable Folding...</p>
-                <div class="p_tag">
-                    <p class="pr">$29.40</p>
-                </div>
-            </div>
-            <div class="inneritems">
-                <img src="https://gloimg.gbtcdn.com/soa/gb/pdm-product-pic/Electronic/2019/09/16/goods_img-v1/20190916110631_93969.jpg" alt="">
-                <p class="name">WalkingPad C1 Foldable Walking Machine...</p>
-                <div class="p_tag">
-                    <p class="pr">$443.40</p>
-                </div>
-            </div>
-            <div class="inneritems">
-                <img src="https://gloimg.gbtcdn.com/soa/gb/pdm-product-pic/Electronic/2018/11/13/goods_img-v1/20181113181627_76689.jpg" alt="">
-                <p class="name">Gocomma 021 Liner Lock Folding Knife...</p>
-                <div class="p_tag">
-                    <p class="pr">$7.83</p>
-                </div>
-            </div>
-            <div class="inneritems">
-                <img src="https://gloimg.gbtcdn.com/gb/pdm-product-pic/Electronic/2017/09/16/goods-img/1505673733451316354.jpg" alt="">
-                <p class="name">Universal Bicycle Flashlight Mount Clip...</p>
-                <div class="p_tag">
-                    <p class="pr">$2.99</p>
-                </div>
-            </div>
-            <div class="inneritems">
-                <img src="https://gloimg.gbtcdn.com/soa/gb/pdm-product-pic/Electronic/2020/07/17/goods_img-v2/20200717105920_5f11140840070.jpg" alt="">
-                <p class="name">Fully Intelligent Steering Brake Tail Light Flasher...</p>
-                <div class="p_tag">
-                    <p class="pr">$15.33</p>
-                </div>
-            </div>
-            <div><i class="fa-solid fa-chevron-right"></i></div>
+        <div class="main_container">
+            <div class="left_arr"><i class="fa-solid fa-chevron-left"></i></div>
+            <div class="container"></div>
+            <div class="right_arr"><i class="fa-solid fa-chevron-right"></i></div>
+        </div>
         </div>    
     </div>
     <br>
@@ -443,52 +403,11 @@
     <br>
     <div class="box6">
         <div class="main_fea">Sponsored Products Related to This Item</div>
-        <div class="items">
-            <div><i class="fa-solid fa-chevron-left"></i></div>
-            <div class="inneritems">
-                <img src="https://gloimg.gbtcdn.com/soa/gb/item/6870745450383863808/16486/goods_img-v1/d2274aa5b42c.jpg" alt="">
-                <p class="name">ENGWE Bike C20 PRO Adult Electric Bike...</p>
-                <div class="p_tag">
-                    <p class="pr">$1999.00</p>
-                </div>
-            </div>
-            <div class="inneritems">
-                <img src="https://gloimg.gbtcdn.com/soa/gb/item/6870745450383863808/16486/goods_img-v1/9cddbe59a65e.jpg" alt="">
-                <p class="name">ENGWE Bike C20 20inch  Electric Bike...</p>
-                <div class="p_tag">
-                    <p class="pr">$1299.40</p>
-                </div>
-            </div>
-            <div class="inneritems">
-                <img src="https://gloimg.gbtcdn.com/soa/gb/item/6878391336429613056/16481/goods_img-v1/6c2275ad7c3c.jpg" alt="">
-                <p class="name">Xiaomi Wiha Zai Hause Home Repair Tool Set ...</p>
-                <div class="p_tag">
-                    <p class="pr">$50.40</p>
-                </div>
-            </div>
-            <div class="inneritems">
-                <img src="https://gloimg.gbtcdn.com/soa/gb/item/6901892192051326976/16476/goods_img-v1/d629e2547919.jpg" alt="">
-                <p class="name">Infant Seat Circle Water Sitting Circle Unicorn...</p>
-                <div class="p_tag">
-                    <p class="pr">$26.83</p>
-                </div>
-            </div>
-            <div class="inneritems">
-                <img src="https://gloimg.gbtcdn.com/soa/gb/item/6901892192051326976/16476/goods_img-v1/c9ae8f76106a.jpg" alt="">
-                <p class="name">Sunshade Car Boat Sun Protection Seat Baby...</p>
-                <div class="p_tag">
-                    <p class="pr">$28.99</p>
-                </div>
-            </div>
-            <div class="inneritems">
-                <img src="https://gloimg.gbtcdn.com/soa/gb/item/6898296044149469184/16476/goods_img-v1/f2e8034b5e3f.jpg" alt="">
-                <p class="name">Meepo Mini2 Electric Skateboard with Remo...</p>
-                <div class="p_tag">
-                    <p class="pr">$469.33</p>
-                </div>
-            </div>
-            <div><i class="fa-solid fa-chevron-right"></i></div>
-        </div> 
+        <div class="main_container1">
+            <div class="left_arr1"><i class="fa-solid fa-chevron-left"></i></div>
+            <div class="container1"></div>
+            <div class="right_arr1"><i class="fa-solid fa-chevron-right"></i></div>
+        </div>
     </div>
     <br>
     <div class="box7">
