select language added in home

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gearbest: Affordable Quality, Fun Shopping</title>
+    <!-- google language -->
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+          new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+        }
+        </script>
+        
+        <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script
       src="https://kit.fontawesome.com/24c494a6b6.js"
       crossorigin="anonymous"
@@ -35,8 +43,16 @@
         <p><span><i class="fa-solid fa-mobile-screen-button"></i></span><span> Save $3 with app</span><span><select name="" id="app"></select></span></p>
         <p>Support Center</p>
         <p>Ship to <span><img src="https://uidesign.gbtcdn.com/GB/app/2018/flag_png/us.png" alt="" width="25px" height="15px"> /USD</span><select name=""></select></p>
-        <p>Language<span><select name="" id=""></select></span></p>
-        <p>Country Website<select name="" id=""></select></p>
+        <div id="google_translate_element"></div>
+        <p> <span><select name="" id="">
+            <option value="">Country Website</option>
+            <option value="">Global(English)</option>
+            <option value="">France</option>
+            <option value="">Espana</option>
+            <option value="">Portugal</option>
+            <option value="">India</option>
+            <option value="Japan"></option>
+        </select></span></p>
     </div>
 
 
@@ -54,7 +70,7 @@
     
     </div>
 <div id="sign">
-    <p><span></span>Sign in</p>
+    <p><span><i class="fa-solid fa-user"></i></span>Sign in</p>
     <p><span><i class="fa-regular fa-heart"></i></i></span> Favourites</p>
     <p><span><i class="fa-solid fa-cart-arrow-down"></i></span> Cart</p>
 </div>
@@ -62,10 +78,10 @@
 </div>  
 
 <div id="cat">
-    <div id="black"><h4>Category</h4></div>
-    <div><h4>SUPER DEALS</h4></div>
-    <div><h4>APP ONLY</h4></div>
-    <div><h4>NEW ARRIVALS</h4></div>
+    <div id="black"> <h4><a href="index.html" id="blackcategory">Category</a></h4></div>
+    <div><h4><a href="superdeals.html">SUPER DEALS</a> </h4></div>
+    <div><h4><a href="apponly.html"> APP ONLY</a></h4></div>
+    <div><h4><a href="new-arrival.html">NEW ARRIVALS</a></h4></div>
 </div>
     <div id="block">
 <div id="category"></div>
