--- a/new-arrival.html
+++ b/new-arrival.html
@@ -36,7 +36,7 @@
             
             </div>
         <div id="sign">
-            <p><span></span>Sign in</p>
+            <p><span><i class="fa-solid fa-user"></i></span>Sign in</p>
             <p><span><i class="fa-regular fa-heart"></i></i></span> Favourites</p>
             <p><span><i class="fa-solid fa-cart-arrow-down"></i></span> Cart</p>
         </div>
