--- a/productPage.html
+++ b/productPage.html
@@ -31,6 +31,19 @@
             <p>Ship to <span><img src="https://uidesign.gbtcdn.com/GB/app/2018/flag_png/us.png" alt="" width="25px" height="15px"> /USD</span><select name=""></select></p>
             <p>Language<span><select name="" id=""></select></span></p>
             <p>Country Website<select name="" id=""></select></p>
+                <!-- <option value=""> </option>
+                <option >Global(English)</option>
+                <optiop>France</optiop>
+                <optiop>Espana</optiop>
+                <optiop>Pocnr</optiop>
+                <optiop>Portugal</optiop>
+                <optiop>Italia</optiop>
+                <optiop>Deutshland</optiop>
+                <optiop>Brasil</optiop>
+                <optiop>Turkiye</optiop>
+                <optiop>Polska</optiop>
+                <optiop>Japan</optiop> -->
+            
         </div>
     </div>
     <div id="searchbar">
@@ -50,7 +63,7 @@
     </div>  
     
     <div id="cato">
-        <div><h4><span><i class="fa-solid fa-bars"></i></span><a href="index.html">Category</a> </h4></div>
+        <div><h4><span><i class="fa-solid fa-bars"></i></span><a href="index.html"> Category</a> </h4></div>
         <div><h4><a href="superdeals.html">SUPER DEALS</a> </h4></div>
         <div><h4><a href="apponly.htlm">APP ONLY</a> </h4></div>
         <div><h4><a href="new-arrival.html"> NEW ARRIVALS</a></h4></div>
