add sliding img in home page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <option value="">Espana</option>
             <option value="">Portugal</option>
             <option value="">India</option>
-            <option value="Japan"></option>
+            <option value="">Japan</option>
         </select></span></p>
     </div>
 
@@ -80,13 +80,41 @@
 <div id="cat">
     <div id="black"> <h4><a href="index.html" id="blackcategory">Category</a></h4></div>
     <div><h4><a href="superdeals.html">SUPER DEALS</a> </h4></div>
-    <div><h4><a href="apponly.html"> APP ONLY</a></h4></div>
+    <div><h4><a href="app.html"> APP ONLY</a></h4></div>
     <div><h4><a href="new-arrival.html">NEW ARRIVALS</a></h4></div>
 </div>
     <div id="block">
 <div id="category"></div>
-<img src="https://uidesign.gbtcdn.com/GB/image/8823/91190%C3%97420-en.jpg" alt="">
+<div class="slideshow-container">
+
+    <div class="mySlides fade">
+      <div class="numbertext"></div>
+      <img src="https://uidesign.gbtcdn.com/GB/image/9599/PC+banner+1190X420+en.jpg" style="width: 950px;
+      height: 420px;margin-left: -160px;">
+      <div class="text"></div>
+    </div>
+    
+    <div class="mySlides fade">
+      <div class="numbertext"></div>
+      <img src="https://uidesign.gbtcdn.com/GB/image/8823/91190%C3%97420-en.jpg" style="width: 950px;
+      height: 420px;margin-left: -160px;">
+      <div class="text"></div>
+    </div>
+    
+    <div class="mySlides fade">
+      <div class="numbertext"></div>
+      <img src="https://uidesign.gbtcdn.com/GB/image/8823/PPC+1190X420+EN.jpg" style="width: 950px;
+      height: 420px;margin-left: -160px;">
+      <div class="text"></div>
+    </div> 
+    <div class="mySlides fade">
+      <div class="numbertext"></div>
+      <img src="https://uidesign.gbtcdn.com/GB/image/9534/0PC+1190X420+EN.jpg" style="width: 950px;
+      height: 420px;margin-left: -160px;">
+      <div class="text"></div>
+    </div> 
 </div>
+    </div>
 
 <div id="display">
     <div><img src="https://i.ibb.co/g3ZCjnt/Screenshot-4.png" width="235px" alt=""></div>
