--- a/superdeals.html
+++ b/superdeals.html
@@ -48,7 +48,7 @@
 <div id="cato">
     <div><h4><span><i class="fa-solid fa-bars"></i></span><a href="index.html"> Category</a></h4></div>
     <div><h4><a href="superdeals.html"> SUPER DEALS</h4></a></div>
-    <div><h4><a href=""></a> APP ONLY</h4></div>
+    <div><h4><a href="app.html">APP ONLY</a> </h4></div>
     <div><h4><a href="new-arrival.html"> NEW ARRIVALS</a></h4></div>
 </div>
 
