link signin page and add favicon icon in all pages

--- a/all-new-arrival.html
+++ b/all-new-arrival.html
@@ -9,6 +9,11 @@
         src="https://kit.fontawesome.com/24c494a6b6.js"
         crossorigin="anonymous">
     </script>
+     <link
+     rel="icon"
+     href="https://image.winudf.com/v2/image1/Y29tLmdsb2JhbGVncm93LmFwcC5nZWFyYmVzdF9pY29uXzE1NjEwNTQyNDlfMDc5/icon.png?w=&fakeurl=1"
+     type="image/x-icon"
+   />
     <title>New Arrival All</title>
     <style>
         .NewProduct-center{
