--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+    rel="icon"
+    href="https://image.winudf.com/v2/image1/Y29tLmdsb2JhbGVncm93LmFwcC5nZWFyYmVzdF9pY29uXzE1NjEwNTQyNDlfMDc5/icon.png?w=&fakeurl=1"
+    type="image/x-icon"
+  />
     <title>Gearbest: Affordable Quality, Fun Shopping</title>
     <!-- google language -->
     <script type="text/javascript">
@@ -70,7 +75,7 @@
     
     </div>
 <div id="sign">
-    <p><span><i class="fa-solid fa-user"></i></span>Sign in</p>
+    <p><span><i class="fa-solid fa-user"></i></span><a href="signin.html" style="color: grey;">Sign in</a></p>
     <p><span><i class="fa-regular fa-heart"></i></i></span> Favourites</p>
     <p><span><i class="fa-solid fa-cart-arrow-down"></i></span> Cart</p>
 </div>
