--- a/new-arrival.html
+++ b/new-arrival.html
@@ -9,6 +9,11 @@
         src="https://kit.fontawesome.com/24c494a6b6.js"
         crossorigin="anonymous">
     </script>
+     <link
+     rel="icon"
+     href="https://image.winudf.com/v2/image1/Y29tLmdsb2JhbGVncm93LmFwcC5nZWFyYmVzdF9pY29uXzE1NjEwNTQyNDlfMDc5/icon.png?w=&fakeurl=1"
+     type="image/x-icon"
+   />
     <title>New Arrival Deals</title>
 </head>
 <body>
@@ -46,7 +51,7 @@
         <div id="cat">
             <div id="black"><h4><span><i class="fa-solid fa-bars"></i><a href="index.html" class="ahrefcategory">Category</a></h4></div>
     <div><h4><a href="superdeals.html">SUPER DEALS</a></h4></div>
-    <div><h4><a href="AppOnly.html">APP ONLY</a></h4></div>
+    <div><h4><a href="app.html">APP ONLY</a></h4></div>
     <div><h4><a href="new-arrival.html">NEW ARRIVALS</a></h4></div>
         </div>
     </div>
