--- a/productPage.html
+++ b/productPage.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="productPage.css">
     <link rel="stylesheet" href="superdeals.css">
     <link rel="stylesheet" href="index.css">
+    <link
+    rel="icon"
+    href="https://image.winudf.com/v2/image1/Y29tLmdsb2JhbGVncm93LmFwcC5nZWFyYmVzdF9pY29uXzE1NjEwNTQyNDlfMDc5/icon.png?w=&fakeurl=1"
+    type="image/x-icon"
+  />
     
     <title>FIIDO D11 Folding Electric Moped Bicycle 20 Inches Tire 25km/h Max Speed Three Modes 11.6AH Battery 100km Range Dual Disc Brakes with LCD Display Sale, Price &amp; Reviews | Gearbest</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
