--- a/superdeals.html
+++ b/superdeals.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/4dbaa63c16.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="superdeals.css">
+    <link
+    rel="icon"
+    href="https://image.winudf.com/v2/image1/Y29tLmdsb2JhbGVncm93LmFwcC5nZWFyYmVzdF9pY29uXzE1NjEwNTQyNDlfMDc5/icon.png?w=&fakeurl=1"
+    type="image/x-icon"
+  />
     <title>Deals Online | Gearbest.com</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
