--- a/superdeals.html
+++ b/superdeals.html
@@ -116,13 +116,13 @@
                     <p>Sort By:</p>
                 </div>
                 <div>
-                    <p>Recommend</p>
+                    <p class="recommend">Recommend</p>
                 </div>
                 <div>
-                    <p>Hottest</p>
+                    <p class="hottest">Hottest</p>
                 </div>
                 <div>
-                    <p>Newest</p>
+                    <p class="newest">Newest</p>
                 </div>
                 <div class="arrow">
                     <p>Price</p>
@@ -201,7 +201,7 @@
             <div class="icon-tu"><a  href="http://bit.ly/2LadoyE"> <i class="fa-brands fa-tumblr"></i> </a></div> 
     </div>
 </div>
-<div class="bottom_box3">
+<div class="bot_box3">
     <div class="bottom_box3_1">
         <h4>Company Information</h4> 
         <p> <a  href="https://www.gearbest.com/about/about-us.html"> About Us </a> </p> 
