link cart and payment page

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     </div>
 <div id="sign">
     <p><span><i class="fa-solid fa-user"></i></span><a href="signin.html" style="color: grey;">Sign in</a></p>
-    <p><span><i class="fa-regular fa-heart"></i></i></span> Favourites</p>
-    <p><span><i class="fa-solid fa-cart-arrow-down"></i></span> Cart</p>
+    <p><span><i class="fa-regular fa-heart"></i></i></span> <a href="fav.html">Favourites</a></p>
+    <p><span><i class="fa-solid fa-cart-arrow-down"></i></span> <a href="cart.html">Cart</a></p>
 </div>
 
 </div>  
