sorting functions added

--- a/superdeals.html
+++ b/superdeals.html
@@ -118,7 +118,7 @@
         <div id="third_box">
             <div id="sorting">
                 <div>
-                    <p>Sort By:</p>
+                    <p class="default">Sort By:</p>
                 </div>
                 <div>
                     <p class="recommend">Recommend</p>
@@ -130,7 +130,7 @@
                     <p class="newest">Newest</p>
                 </div>
                 <div class="arrow">
-                    <p>Price</p>
+                    <p class="Price">Price</p>
                     <i class="fa-solid fa-caret-up"></i>
                 </div>
                 <div class="arrow">
