--- a/payment.html
+++ b/payment.html
@@ -237,11 +237,11 @@
                 <div class="payment_method_boxb3"></div>
                     <div class="payment_method_boxb3p">
                         <div><p>Grand Total</p></div>
-                        <div class="payment_method_total"><p>$57.99</p></div>
+                        <div class="payment_method_total"><p>$890</p></div>
                     </div>
                     <div class="payment_method_boxb3p">
                         <div><p>Payable Amount</p></div>
-                        <div class="payment_method_payable"><h5>$57.99</h5></div>
+                        <div class="payment_method_payable"><h5>890</h5></div>
                     </div>
 
                     <input class="payment_paynow_btn" type="submit" value="PAY NOW"/>
